--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-sass": "~0.8.0"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "smooth-scroll": "git://github.com/cferdinandi/smooth-scroll"
+  }
 }
