more mobile styles

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "inarchives",
-  "title": "inArchives",
-  "description": "Custom theme for In Archives",
+  "name": "twpol",
+  "title": "twpol",
+  "description": "Custom theme for IA",
   "version": "0.1.0",
   "homepage": "http://james-oldfield.co",
   "author": {
